# PlumeLens

./: .gitattributes  .gitignore  .prettierignore  README.md  components.json  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  eval.yml
docs/: HANDOVER.md  PRODUCT_UX_PLAN.md  TECHNICAL_SPEC.md
electron/: diagnostics.ts  main.ts  preload.ts  process-manager.ts
engine/: __init__.py  __main__.py  main.py
engine/core/: config.py  database.py  lifespan.py  logging.py
engine/llm/: client.py  parser.py  provider.py
engine/models/: README.md  bird_visibility.MODEL_CARD.md  bird_visibility_config.json  clipiqa_plus.onnx  dinov3_species.MODEL_CARD.md  hyperiqa.onnx  species_taxonomy.parquet  species_trained.json  species_wiki.parquet  yolo26l-bird-det.MODEL_CARD.md
engine/pipeline/: __init__.py  detector.py  grader.py  manager.py  models.py  pose.py  preprocess.py  quality.py  species.py
engine/prompts/: registry.py
engine/services/: analyzer.py  cache.py  decisions.py  queue.py  ranker.py  scanner.py  thumbnail.py
evals/: report.py  run_eval.py
renderer/: index.html
renderer/src/: App.tsx  app.css  env.d.ts  main.tsx
scripts/: build_species_wiki_json.py  export_dinov3_backbone.py  export_iqa_onnx.py  fetch_species_wiki.py  identify_trained_species.py  plumelens-engine.spec
tests/e2e/: decisions.spec.ts  smoke.spec.ts
tests/engine/: conftest.py
(+44 files in other folders)
